Further refactoring of parsers and codecs